<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        >
    </item>

    <item
        android:id="@+id/feed"
        android:icon="@drawable/feed_icon"
        android:title="@string/feed"
        >
    </item>

    <item
    android:id="@+id/placeholder"
    android:title=""
    >
</item>

    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification_icon"
        android:title="@string/notification"
        >
    </item>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        >
    </item>


</menu>